--- a/pages/specialties.html
+++ b/pages/specialties.html
@@ -4,6 +4,7 @@
     <head>
         <title>Doc & Co Website</title>
         <link href="../styles/specialties.css" rel="stylesheet" />
+        <link href="./images/LogoMakr-8spmWd.png" rel="icon" />
     </head>
     <body>
         <nav>
