--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <head>
         <title>Doc & Co Website</title>
         <link href="./styles/styles.css" rel="stylesheet" />
-        <link href="./images/LogoMakr-8spmWd.png" rel="icon" />
     </head>
     <body>
         <nav>
@@ -18,7 +17,14 @@
             </div>
         </nav>
         <div id="PLACEHOLDER">
-            
+            <h3 id="clock"></h3>
         </div>
+        <style>
+            #clock {
+                text-align: center;
+            }
+        </style>
+
+        <script src="./scripts/index.js"></script>
     </body>
 </html>
