--- a/pages/contact-info.html
+++ b/pages/contact-info.html
@@ -33,5 +33,15 @@
                 <h3>Discord: <span><a href="https://discord.com/login" target="_blank" class="email">OminousSun#0391</a></span></h3>
             </div>
         </div>
+        <div id="PLACEHOLDER">
+            <h3 id="clock"></h3>
+        </div>
+        <style>
+            #clock {
+                text-align: center;
+            }
+        </style>
+
+        <script src="../scripts/index.js"></script>
     </body>
 </html>
