--- a/pages/projects.html
+++ b/pages/projects.html
@@ -20,14 +20,24 @@
         <div id="project-holder">
             <div class="project">
                 <h2>CRASHBot</h2>
-                <h3>Status: Active, Unmaintained</h3>
-                <p>CRASHBot is a Discord bot maintained and owned by Doc & Co, it was a passion project that ended up being semi-successful, we learned valuable information about Discord bots and how they function. The Bot is rarely online due to lack of use as well as it having to be run off our computers.</p>
+                <h3>Status: Under rework</h3>
+                <p>After CRASHBot v1 broke due to issues with the API and an unknown glitch causing multiple files to delete themselves, we decided to completely rewrite CRASHBot using only JavaScript.</p>
             </div>
             <div class="project">
                 <h2>Radioactive SMP</h2>
-                <h3>Status: Active, Maintained</h3>
+                <h3>Status: Discontinued</h3>
                 <p>RSMP was a server that was hosted and managed by Cdut which used Doc & Co developers to find issues with mods quickly so that the server would not have to face excessive downtime.</p>
             </div>
         </div>
+        <div id="PLACEHOLDER">
+            <h3 id="clock"></h3>
+        </div>
+        <style>
+            #clock {
+                text-align: center;
+            }
+        </style>
+
+        <script src="../scripts/index.js"></script>
     </body>
 </html>
