--- a/pages/specialties.html
+++ b/pages/specialties.html
@@ -17,5 +17,15 @@
                 <a href="../pages/contact-info.html"><h2>Contact Info</h2></a>
             </div>
         </nav>
+        <div id="PLACEHOLDER">
+            <h3 id="clock"></h3>
+        </div>
+        <style>
+            #clock {
+                text-align: center;
+            }
+        </style>
+
+        <script src="../scripts/index.js"></script>
     </body>
 </html>
