--- a/pages/team.html
+++ b/pages/team.html
@@ -35,5 +35,15 @@
                 <a href="../pages/contact-info.html"><h4>Need Help? Contact Me!</h4></a>
             </div>
         </div>
+        <div id="PLACEHOLDER">
+            <h3 id="clock"></h3>
+        </div>
+        <style>
+            #clock {
+                text-align: center;
+            }
+        </style>
+
+        <script src="../scripts/index.js"></script>
     </body>
 </html>
